[tool.poetry]
name = "auth-core"
version = "0.1.0"
description = "Authentication Core Component with JWT token generation, user credential verification, and token validation"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "auth_core"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pyjwt = "^2.8.0"
cryptography = "^41.0.4"
sqlalchemy = "^2.0.22"
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-multipart = "^0.0.6"
httpx = "^0.25.0"
pydantic-settings = "^2.0.0"
email-validator = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.5.1"
pytest-cov = "^4.1.0"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["auth_core/tests"]
python_files = "test_*.py"
python_functions = "test_*"
